style fix to not have useless horizontal scrollbar

--- a/src/components/MainMenu/styles.module.scss
+++ b/src/components/MainMenu/styles.module.scss
@@ -14,7 +14,6 @@ $largeMobileHeight: 700px;
     background-color: rgba(14, 9, 39, 0.86);
     right: -100%;
     transition: right 0.5s ease-in-out;
-    overflow-y: hidden;
 
     .mainContent {
         overflow-y: auto;
